force-app/main/default/objects/Indicator_Bundle__mdt/Indicator_Bundle__mdt.object-meta.xml
<CustomObject>
    <description>The overall configuration of a bundle of indicators</description>
    <label>Indicator Bundle</label>
    <pluralLabel>Indicator Bundles</pluralLabel>
</CustomObject>