force-app/main/default/objects/Indicator_Bundle__mdt/fields/Card_Icon__c.field-meta.xml
<CustomField>
    <fullName>Card_Icon__c</fullName>
    <inlineHelpText>(Optional) An SLDS Icon Name from https://www.lightningdesignsystem.com/icons</inlineHelpText>
    <label>Card Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>