force-app/main/default/objects/Indicator_Bundle__mdt/fields/Card_Icon_Class__c.field-meta.xml
<CustomField>
    <fullName>Card_Icon_Class__c</fullName>
    <inlineHelpText>(Optional) The Font Awesome icon class from https://lightningdesignsystem.com/icons/ when being used instead of Field, Text, or Image URL.</inlineHelpText>
    <label>Card Icon Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>