force-app/main/default/objects/Indicator_Bundle__mdt/fields/Card_Text__c.field-meta.xml
<CustomField>
    <fullName>Card_Text__c</fullName>
    <inlineHelpText>Text to appear above the Indicators</inlineHelpText>
    <label>Card Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>