force-app/main/default/objects/Indicator_Bundle__mdt/fields/Card_Title__c.field-meta.xml
<CustomField>
    <fullName>Card_Title__c</fullName>
    <inlineHelpText>The title of the Indicators card</inlineHelpText>
    <label>Card Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>